# metaomics-scribe

./: .gitignore  CITATION.cff  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: MANIFEST_SCHEMA.md  PIPELINE_SUBSECTION_GAP.md  PIPELINE_V2_GAPS.md
examples/: manifest.example.json
journals/: frontiers_microbiome.yaml
methods/: metagenomics_pipeline_automation.yaml
src/metaomics_scribe/: __init__.py  cli.py  figure_builder.py  journal.py  llm.py  manifest.py  manuscript.py  methodology.py  stats_extractor.py
tests/: test_cli.py  test_figure_builder.py  test_llm.py  test_manifest.py  test_manuscript.py  test_stats_extractor.py
