[project]
name = "metaomics-scribe"
version = "0.0.0"
description = "Research agent that turns metagenomics pipeline outputs into a journal-ready manuscript draft, grounded in a stable manifest.json contract."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Julio Cesar Ortega Cambara", email = "juliocesar921016@gmail.com" },
]
requires-python = ">=3.12"
keywords = [
    "metagenomics",
    "manuscript-generation",
    "research-agent",
    "reproducibility",
    "large-language-models",
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "pydantic>=2.7",
    "pillow>=10.4",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
llm = [
    "claude-agent-sdk>=0.1.0",
]

[project.scripts]
metaomics-scribe = "metaomics_scribe.cli:main"

[project.urls]
Homepage = "https://github.com/Julio92-C/metaomics-scribe"
Repository = "https://github.com/Julio92-C/metaomics-scribe"
Issues = "https://github.com/Julio92-C/metaomics-scribe/issues"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/metaomics_scribe"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Deselect live_api by default — those tests call out to Claude via the
# Claude Agent SDK, which is slow and depends on the user's logged-in CLI.
# Opt in with `uv run pytest -m live_api`.
addopts = ["-ra", "--strict-markers", "-m", "not live_api"]
markers = [
    "live_api: hits the real Claude Agent SDK (subscription auth via local `claude` CLI). Opt in via `-m live_api`.",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
